containerization/kubernetes/networks/basicnetwork/pod-with-hostname.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: nginx
  name: nginx-app
  labels:
    app: nginx
spec:
  hostname: nginx
  subdomain: nginxapp #this is name of services
  containers:
    - name: nginx
      image: nginx:latest
      ports:
        - containerPort: 80
      resources:
        limits:
          cpu: 100m
          memory: 128Mi
        requests:
          cpu: 100m
          memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: nginxapp
  namespace: nginx
spec:
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
