containerization/kubernetes/networks/basicnetwork/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  namespace: nginx
spec:
  selector:
    app: nginx
  type: ClusterIP
  # type: NodePort
  ports:
    - name: nginx-svc-nodeport
      protocol: TCP
      port: 8080
      targetPort: 8080
      # nodePort: 30080 # range 30000-3276 - just for nodeport
